# TT-Format-Linear-Layer

./: CMakeLists.txt  Instructions.txt  MMK.txt  README.md
include/: Config.h.in  MatrixMultiplication.h
include/tt_linear/: tt_core.h  tt_linear.h
kernel/: Compute.cpp  Memory.cpp  Top.cpp
src/tt_linear/: tt_core.cpp  tt_linear.cpp
test/: tt_linear_test.cpp
